--- a/_sass/jekyll-theme-dracula.scss
+++ b/_sass/jekyll-theme-dracula.scss
@@ -363,7 +363,8 @@ section {
 
 @media print, screen and (max-width: 480px) {
   #header {
-    margin-top: -20px;
+    margin-top: -10px;
+    margin-bottom: -10px;
   }
 
   section {
