small footer change

--- a/_sass/jekyll-theme-dracula.scss
+++ b/_sass/jekyll-theme-dracula.scss
@@ -367,6 +367,11 @@ section {
     margin-bottom: -10px;
   }
 
+  #footer {
+    display: none;
+  }
+  
+  
   section {
     margin-top: 40px;
   }
