--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
           {% if page.icon %}
             <img src="{{ page.icon | relative_url }}" />
           {% endif %}
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <h1 style="line-height:1">{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
         </div>
