--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -37,7 +37,7 @@
           {% if page.icon %}
           <img src="{{ page.icon | relative_url }}" />
           {% endif %}
-          <h1>{{ page.title }}</h1>
+          <h1 style="line-height:1">{{ page.title }}</h1>
           <hr>
         </div>
 
